--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -546,7 +546,7 @@ html, body {
       font-family: "Dosis", sans-serif;
       color: #777e86; }
 
-#research-categories #content p {
+#research #content p {
   display: inline; }
 
 #speaking ul {
