--- a/website/templates/admin_bar.html
+++ b/website/templates/admin_bar.html
@@ -5,7 +5,7 @@
   <a href="{% url 'admin:index' %}">
     Admin</a>
 
-  <a id="research-link" href="{% url 'all_research_url' %}">
+  <a id="research-link" href="{% url 'research_url' %}">
     Research</a>
 
   <a class="logout" href="{% url 'logout_url' %}?next={{ request.path }}">
