--- a/website/templates/head.html
+++ b/website/templates/head.html
@@ -11,6 +11,9 @@
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"
     type="text/javascript"></script>
 
+  <script src="{% static 'js/jquery.js' %}"
+    type="text/javascript"></script>
+
   <script src="{% static 'js/birds.js' %}"
     type="text/javascript"></script>
 
