Preliminary caption work

--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -9,6 +9,7 @@
     max-width: 750px
     width: 100%
 
-  img
-    max-width: 500px
-    max-height: 500px
+  .markdown
+    img, .image-caption
+      max-height: 400px
+      max-width: 400px
