--- a/website/static/stylesheets/font.sass
+++ b/website/static/stylesheets/font.sass
@@ -41,18 +41,18 @@ h2, h3, h4, .markdown h1
   color: $chickadee-dark-gray
 
 h2
-  font-size: 30px
+  font-size: $base-font-size + 13
   margin-top: -10px
 
 h3, .markdown h1
-  font-size: 26px
+  font-size: $base-font-size + 9
   margin-top: -10px
 
 h4, .markdown h2
-  font-size: 22px
+  font-size: $base-font-size + 5
 
 .markdown h3, .markdown h4
-  font-size: 18px
+  font-size: $base-font-size + 2
 
 a
   text-decoration: none
@@ -64,6 +64,10 @@ a
 .help-message
   color: $chickadee-gray
   font-style: oblique
+
+.image-caption
+  color: $chickadee-dark-gray
+  font-size: $base-font-size - 2
 
 b, strong
   font-weight: bold
