--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -85,7 +85,7 @@ h4, .markdown h2 {
   font-size: 22px; }
 
 .markdown h3, .markdown h4 {
-  font-size: 18px; }
+  font-size: 19px; }
 
 a {
   text-decoration: none;
@@ -96,6 +96,10 @@ a {
 .help-message {
   color: #9ba5a9;
   font-style: oblique; }
+
+.image-caption {
+  color: #777e86;
+  font-size: 15px; }
 
 b, strong {
   font-weight: bold; }
@@ -130,9 +134,9 @@ i, em {
 
 .markdown h1, .markdown h2, .markdown h3, .markdown h4 {
   margin-top: 36px; }
-.markdown p, .markdown ul, .markdown ol, .markdown img, .markdown h1, .markdown h2, .markdown h3, .markdown h4 {
-  margin-bottom: 18px; }
-  .markdown p:last-child, .markdown ul:last-child, .markdown ol:last-child, .markdown img:last-child, .markdown h1:last-child, .markdown h2:last-child, .markdown h3:last-child, .markdown h4:last-child {
+.markdown p, .markdown ul, .markdown ol, .markdown h1, .markdown h2, .markdown h3, .markdown h4, .markdown .image-wrapper {
+  margin-bottom: 24px; }
+  .markdown p:last-child, .markdown ul:last-child, .markdown ol:last-child, .markdown h1:last-child, .markdown h2:last-child, .markdown h3:last-child, .markdown h4:last-child, .markdown .image-wrapper:last-child {
     margin-bottom: none; }
 .markdown ul {
   list-style-type: disc;
@@ -140,11 +144,13 @@ i, em {
 .markdown ol {
   list-style-type: decimal;
   list-style-position: inside; }
-.markdown img {
+.markdown img, .markdown .image-caption {
   display: block;
   width: 100%;
+  max-height: 700px;
   max-width: 700px;
-  margin: 36px auto; }
+  margin-left: auto;
+  margin-right: auto; }
 
 html, body {
   min-width: 100%;
@@ -581,9 +587,9 @@ html, body {
   float: left;
   max-width: 750px;
   width: 100%; }
-#webpage img {
-  max-width: 500px;
-  max-height: 500px; }
+#webpage .markdown img, #webpage .markdown .image-caption {
+  max-height: 400px;
+  max-width: 400px; }
 
 #writing #books {
   width: 105%;
