Change podcast feed url

--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -17,8 +17,8 @@
   <a href="{% url 'radio_current_calendar_url' %}">
     Air Calendar</a>
 
-  <a href="{% url 'podcast_url' %}">
-    Podcast</a>
+  <a href="{% url 'radio_podcast_feed_url' %}">
+    Podcast Feed</a>
 </div>
 
 <ul id="year-list">
