Move tags to bottom of webpage

--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -1,13 +1,11 @@
 #webpage
-  #webpage-info
+  #webpage-info, #webpage-content, #webpage-tags
     float: left
-    width: 100%
     margin-bottom: $whitespace
+    width: 100%
 
   #webpage-content
-    float: left
     max-width: 750px
-    width: 100%
 
   .markdown
     img, .image-caption
