--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -579,14 +579,12 @@ html, body {
       #speaking-program #files ul ul ul {
         list-style-type: disc; }
 
-#webpage #webpage-info {
+#webpage #webpage-info, #webpage #webpage-content, #webpage #webpage-tags {
   float: left;
-  width: 100%;
-  margin-bottom: 36px; }
-#webpage #webpage-content {
-  float: left;
-  max-width: 750px;
+  margin-bottom: 36px;
   width: 100%; }
+#webpage #webpage-content {
+  max-width: 750px; }
 #webpage .markdown img, #webpage .markdown .image-caption {
   max-height: 400px;
   max-width: 400px; }
