Fix markdown image bug

--- a/website/static/stylesheets/markdown.sass
+++ b/website/static/stylesheets/markdown.sass
@@ -18,8 +18,7 @@
 
   img, .image-caption
     display: block
-    width: 100%
-    max-height: 700px
     max-width: 700px
+    height: auto
     margin-left: auto
     margin-right: auto
