--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -8,6 +8,15 @@
     max-width: 750px
 
   .markdown
-    img, .image-caption
-      max-height: 400px
-      max-width: 400px
+    .image-wrapper
+      display: table
+      margin-left: auto
+      margin-right: auto
+
+      img
+        max-width: 500px
+        height: auto
+
+      .image-caption
+        display: table-caption
+        caption-side: bottom
