--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -20,3 +20,8 @@
       .image-caption
         display: table-caption
         caption-side: bottom
+
+      &.banner
+        img
+          max-width: 100%
+          height: auto
