--- a/creations/static/stylesheets/webpage.sass
+++ b/creations/static/stylesheets/webpage.sass
@@ -22,6 +22,7 @@
         caption-side: bottom
 
       &.banner
+        width: 100%
         img
+          width: 100%
           max-width: 100%
-          height: auto
