Add blockquote styling

--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -151,6 +151,8 @@ i, em {
   height: auto;
   margin-left: auto;
   margin-right: auto; }
+.markdown blockquote {
+  padding-left: 40px; }
 
 html, body {
   min-width: 100%;
