--- a/birds/templates/bird.html
+++ b/birds/templates/bird.html
@@ -26,7 +26,7 @@
         {% endif %}
       </span>
     {% endfor %}
-    <span>Scientific name: <i>{{ bird.name }}</i></span>
+    <span>Scientific name: <i>{{ bird.scientific_name }}</i></span>
     <span>French name: {{ bird.french_name }}</span>
   </div>
 
