--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -24,7 +24,8 @@
   <ul id="search-results">
     {% for bird in search_birds %}
     <li><a href="{{ bird.get_absolute_url }}">
-      {{ bird.common_name }} (<i>{{ bird.name }}</i>)</a>
+      {{ bird.common_name }}
+      (<i>{{ bird.scientific_name }}</i>)</a>
     </li>
     {% endfor %}
   </ul>
@@ -85,7 +86,8 @@
         {% for species in subfamily.list %}
           <li>
             <a href="{{ species.get_absolute_url }}">
-              {{ species.common_name }} (<i>{{ species.name }}</i>)</a>
+              {{ species.common_name }}
+              (<i>{{ species.scientific_name }}</i>)</a>
           </li>
         {% endfor %}
         </ul>
