Find Birds -> Search Birds

--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -52,7 +52,7 @@
         {% ifequal request.path birds_url %}
         class="active"
         {% endifequal %}>
-      Find Birds</a>
+      Search Birds</a>
   </div>
 
 </div>
