Minor copy change

--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -4,13 +4,13 @@
 {% block body_id %}birds{% endblock %}
 
 
-{% block page_title %}Find Birds{% endblock %}
+{% block page_title %}Search{% endblock %}
 
 
 {% block content %}
 <div id="bird-search" class="page-section">
   <h3 class="page-subtitle">
-    Search For a Species
+    Search by species name
   </h3>
 
   <form action="" method="get">
