--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -4,7 +4,7 @@
 {% block body_id %}birds{% endblock %}
 
 
-{% block page_title %}Search{% endblock %}
+{% block page_title %}Search for Birds{% endblock %}
 
 
 {% block content %}
