Minor copy chnage

--- a/birds/templates/birds.html
+++ b/birds/templates/birds.html
@@ -42,7 +42,7 @@
 
 <div id="birds-taxonomical" class="page-section">
   <h3 class="page-subtitle">
-    Browse All Species Taxonomically
+    Search taxonomically
   </h3>
 
   <ul class="orders">
