Do not capitalize minor words

--- a/waystohelp/templates/ways_to_help.html
+++ b/waystohelp/templates/ways_to_help.html
@@ -5,7 +5,7 @@
 {% block body_id %}ways-to-help{% endblock %}
 
 
-{% block page_title %}101 Ways To Help Birds{% endblock %}
+{% block page_title %}101 Ways to Help Birds{% endblock %}
 
 
 {% block content %}
