--- a/website/templates/header.html
+++ b/website/templates/header.html
@@ -23,7 +23,7 @@
         {% ifequal request.path waystohelp_url %}
         class="active"
         {% endifequal %}>
-      Ways To Help
+      Ways to Help
     </a>
 
     <a href="http://blog.lauraerickson.com">
