Some articles work
Add bullets, nest by publisher, display year only

--- a/birds/static/stylesheets/birds.sass
+++ b/birds/static/stylesheets/birds.sass
@@ -45,10 +45,7 @@
       clear: both
 
       &.year
-        clear: none
-        display: inline
-        font-size: $base-font-size - 4
-        color: $chickadee-gray
+        @include following-text
 
     ul
       list-style-type: disc
