--- a/website/static/stylesheets/elements.sass
+++ b/website/static/stylesheets/elements.sass
@@ -19,6 +19,13 @@
       ul
         list-style-type: disc
 
+@mixin following-text
+  clear: none
+  display: inline
+  font-size: $base-font-size - 4
+  color: $chickadee-gray
+
+
 $tag-spacing: 3px
 .tag
   position: relative
