--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -603,6 +603,27 @@ html, body {
       width: 100%;
       max-width: 100%; }
 
+#writing #articles ul {
+  list-style-position: inside;
+  list-style-type: disc;
+  line-height: 175%; }
+  #writing #articles ul ul li, #writing #articles ul ul ul {
+    padding-left: 30px; }
+  #writing #articles ul ul {
+    list-style-type: circle; }
+    #writing #articles ul ul ul {
+      list-style-type: square; }
+      #writing #articles ul ul ul ul {
+        list-style-type: disc; }
+  #writing #articles ul .publisher {
+    margin-top: 36px; }
+    #writing #articles ul .publisher:first-child {
+      margin-top: None; }
+  #writing #articles ul .year {
+    clear: none;
+    display: inline;
+    font-size: 13px;
+    color: #9ba5a9; }
 #writing #books {
   width: 105%;
   padding: 0 2.5%;
