Minor book styling

--- a/creations/static/stylesheets/writing.sass
+++ b/creations/static/stylesheets/writing.sass
@@ -23,12 +23,12 @@
       float: left
       margin: 0 2.5% 50px 2.5%
       width: 20%
+      line-height: 130%
 
-      img, ul, div
+      img, span
         float: left
         width: 100%
         margin-bottom: $whitespace / 3
-        line-height: 130%
 
       .title
         font-style: italic
