--- a/website/static/stylesheets/styles.css
+++ b/website/static/stylesheets/styles.css
@@ -482,10 +482,13 @@ html, body {
       -webkit-box-sizing: border-box;
       -moz-box-sizing: border-box;
       box-sizing: border-box;
+      color: #d36760;
       display: block;
       width: 100%;
       height: 100%;
       padding: 8px 12px; }
+      #radio #programs .program .program-intro:hover, #radio #programs .program .program-intro.active {
+        color: #cd944c; }
       #radio #programs .program .program-intro .title,
       #radio #programs .program .program-intro .description {
         width: 100%; }
@@ -495,10 +498,6 @@ html, body {
         margin-top: 10px;
         font-size: 15px;
         color: #777e86; }
-      #radio #programs .program .program-intro a {
-        color: #d36760; }
-        #radio #programs .program .program-intro a:hover {
-          color: #d3a060; }
     #radio #programs .program .program-more {
       display: none;
       padding: 0 0 36px 36px; }
@@ -513,10 +512,10 @@ html, body {
         #radio #programs .program .program-more div.audio {
           margin-top: 18px;
           line-height: 15px; }
-        #radio #programs .program .program-more div.transcript a {
+        #radio #programs .program .program-more div.permalink a, #radio #programs .program .program-more div.transcript a {
           color: #d36760; }
-          #radio #programs .program .program-more div.transcript a:hover {
-            color: #d3a060; }
+          #radio #programs .program .program-more div.permalink a:hover, #radio #programs .program .program-more div.permalink a.active, #radio #programs .program .program-more div.transcript a:hover, #radio #programs .program .program-more div.transcript a.active {
+            color: #cd944c; }
         #radio #programs .program .program-more div.tags {
           max-width: 600px; }
 
