--- a/creations/static/stylesheets/radio.sass
+++ b/creations/static/stylesheets/radio.sass
@@ -1,3 +1,19 @@
+.itunes-badge-large
+  display: inline-block
+  overflow: hidden
+  background: url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-lrg.svg) no-repeat
+  width: 110px
+  height: 40px
+
+
+.itunes-badge-small
+  display: inline-block
+  overflow: hidden
+  background: url(http://linkmaker.itunes.apple.com/images/badges/en-us/badge_itunes-sm.svg) no-repeat
+  width: 80px
+  height: 15px
+
+
 #radio
   #links
     width: 100%
@@ -7,6 +23,10 @@
     a
       display: inline-block
       margin-right: $whitespace / 2
+
+      &#itunes-link
+        float: right
+        margin-right: 0px
 
   #year-list
     float: left
