--- a/website/static/stylesheets/markdown.sass
+++ b/website/static/stylesheets/markdown.sass
@@ -6,7 +6,7 @@
     margin-bottom: $whitespace / 1.5
 
     &:last-child
-      margin-bottom: none
+      margin-bottom: 0px
 
   ul
     list-style-type: disc
