--- a/creations/templates/radio.html
+++ b/creations/templates/radio.html
@@ -36,7 +36,7 @@
 
 <ul id="programs">
   {% for program in programs %}
-  <li class="program">
+  <li class="program" data-program-pk="{{ program.pk }}">
     <a class="program-intro" href="#">
       <span class="title">
         {{ program.title }}
@@ -49,25 +49,31 @@
     </a>
 
     <div class="program-more">
-      {% if program.file %}
-      <div class="audio">
-        {% include 'audio_with_download.html' with file=program.file %}
-      </div>
-      {% endif %}
+      <div class="two-columns">
+        <div class="column">
+          <span class="audio">
+            {% include 'audio_with_download.html' with file=program.file %}
+          </span>
 
-      <div>
-        Duration: {{ program.get_printable_duration }}
-      </div>
+          <span class="duration">
+            Duration: {{ program.get_printable_duration }}
+          </span>
 
-      {% if program.supplemental_content_url %}
-      <div class="transcript">
-        <a href="{{ program.supplemental_content_url }}">
-          Transcript and photos</a>
-      </div>
-      {% endif %}
+          {% if program.supplemental_content_url %}
+          <span class="transcript">
+            <a href="{{ program.supplemental_content_url }}">
+              Transcript and photos</a>
+          </span>
+          {% endif %}
 
-      <div class="permalink">
-        <a href="{{ program.get_absolute_url }}">Permalink</a>
+          <span class="permalink">
+            <a href="{{ program.get_absolute_url }}">Permalink</a>
+          </span>
+        </div>
+
+        <div class="column">
+          <span class="artwork"></span>
+        </div>
       </div>
 
       {% include 'tags.html' with item=program %}
